# brand_rating_analizer

./: .gitignore  README.md  main.py  makefile  pyproject.toml
core/: analyzer.py  calculator.py  debug.py  models.py  reader.py  reporter.py
core/reports/: __init__.py  average_rating.py  base.py
core/utils/: converters.py  validators.py
tests/: conftest.py  test_analyzer.py  test_calculator.py  test_integration.py  test_reader.py  test_reporter.py  test_reports.py
tests/fixtures/: empty.csv  multiple_brands.csv  sample.csv
tests/test_utils/: test_converters.py  test_validators.py
