[tool.poetry]
name = "brand-rating-analyzer"
version = "0.1.0"
description = ""
authors = ["shalbuz <sh.mursalov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
