[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brand-rating-analyzer"
version = "0.1.0"
description = ""
authors = ["shalbuz <sh.mursalov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.3"
black = "^25.9.0"
mypy = "^1.18.2"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comperhensions
]
ignore = ["E501"]  # line length handled by black
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.poetry.scripts]
analyzer = "main:main"
